# mmfRecorder-ros

./: .rosinstall  README.md  mmfRecorder  mmf_recorder
lavis_launch/: CMakeLists.txt  package.xml
lavis_launch/launch/: first.launch  second.launch
lavis_smach/: CMakeLists.txt  README.md  package.xml
lavis_smach/launch/: lavis_smach.launch
lavis_smach/nodes/: lavis_smach_node.py
lavis_stage_controller/: CMakeLists.txt  README.md  package.xml
lavis_stage_controller/launch/: lavis_stage_controller.launch
lavis_stage_controller/nodes/: lavis_stage_controller_node.py
lavis_stimuli_controller/: CMakeLists.txt  README.md  package.xml
lavis_stimuli_controller/launch/: lavis_stimuli_controller.launch
lavis_stimuli_controller/nodes/: lavis_stimuli_controller_node.py
mmfRecorder_web_gui/: README.md  package.xml
mmfRecorder_web_gui/src/mmfRecorder_web_gui/static/: lavis.css
mmf_recorder_launch/: CMakeLists.txt  package.xml
mmf_recorder_launch/launch/: first.launch  second.launch
mmf_recorder_web_gui/: CMakeLists.txt  package.xml
mmf_recorder_web_gui/launch/: mmfRecorder_web_gui.launch  mmf_recorder_web_gui.launch
mmf_recorder_web_gui/src/mmfRecorder_web_gui/templates/: web_gui.html
mmf_recorder_web_gui/src/mmf_recorder_web_gui/: web_gui.py
mmf_recorder_web_gui/src/mmf_recorder_web_gui/static/: lavis.css  mmf_recorder.css
mmf_recorder_web_gui/src/mmf_recorder_web_gui/static/js/scripts/: lavis.js  mmf_recorder.js
mmf_recorder_web_gui/src/mmf_recorder_web_gui/templates/: example.html  web_gui.html
