<?xml version="1.0"?>
<package format="2">
  <name>mmf_recorder_web_gui</name>
  <version>0.0.0</version>
  <description>The mmf_recorder_web_gui package</description>

  <maintainer email="bafonso@gmail.com">Bruno Afonso</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/bafonso/mmfRecorder-ros</url>
  <url type="bugtracker">https://github.com/bafonso/mmfRecorder-ros/issues</url>
  <url type="repository">https://github.com/bafonso/mmfRecorder-ros</url>

  <author email="bafonso@gmail.com">Bruno Afonso</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>python-flask</depend>
  <depend>rosbridge_server</depend>
  <depend>web_video_server</depend>

  <export>
  </export>
</package>
